syntax = "proto3";
option go_package = "github.com/vopi181/CheckPlease-User-Backend/CPUser";
package CPUser;

import "google/protobuf/empty.proto";



service CPUser {
//  rpc Login (LoginRequest) returns (LoginReponse) {}

  // Create User Auth, etc
  rpc CreateUser (CreateUserRequest) returns (AuthTokenResponse) {}
  rpc ReAuthUser (ReAuthUserRequest) returns (AuthTokenResponse) {}
  rpc SMSVerification (VerifySMSRequest) returns (AuthTokenResponse) {}


  // Order Info
  rpc OrderInitiation (OrderInitiateRequest) returns (OrderInitiateResponse) {}
  //misc
  rpc Ping (google.protobuf.Empty) returns (PongResponse) {}
}

message PongResponse {
  string pong_message = 1;
}

message CreateUserRequest {
  string phone = 1;
  string fname = 2;
  string lname = 3;
}

message VerifySMSRequest {
  string phone = 1;
  string SMSVerificationToken = 2;
}

message ReAuthUserRequest {
  string phone = 1;
}

message AuthTokenResponse {
  string AuthToken = 1;
}

// Basic Auth Header for requests
message AuthTokenRequest {
  string Token = 1;
}




message OrderInitiateRequest {
  AuthTokenRequest AuthRequest = 1;
  string table_token = 2;
}

message OrderInitiateResponse {
  Order order = 1;
}


// types (idk custom message types)

message OrderItem  {
  string name = 1;
  string type = 2;
  float  cost = 3;
}

message Order {
  string rest_name = 1;
  repeated OrderItem orders = 2;
}